testsuite/tests/parsetree/test_ppx.compilers.reference
File "source_jane_street.ml", line 166, characters 35-42:
166 |   ('a : value mod immutable global aliased)
                                         ^^^^^^^
Warning 211 [redundant-modifier]: This modifier is redundant.

File "source_jane_street.ml", line 176, characters 0-24:
176 | type t = #(int * float#)
      ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name t.
       Names must be unique in a given structure or signature.
